# coin3d

./: .gitignore  CMakeLists.txt  README.md  index.html  template.html
assets/: coin3d.js  coin3d.wasm
src/: defs.h  drawing_utils.h  main.c  main.cpp
src/sokol/: sokol_app.h  sokol_gfx.h  sokol_imgui.h
